cmake_minimum_required(VERSION 3.20)
project(DOM_DRONE_ORTHOPHOTO_MAP VERSION 1.0.0 LANGUAGES CXX)

set(LOG_LEVEL LOGLEVEL_DEBUG)
set(WANTED_BUILD_TYPE DEBUG)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


if(${WANTED_BUILD_TYPE} STREQUAL "DEBUG")
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_DEBUG "-g")
elseif(${WANTED_BUILD_TYPE} STREQUAL "RELEASE")
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
endif()

file(COPY ${CMAKE_SOURCE_DIR}/models DESTINATION ${CMAKE_BINARY_DIR}/data)
add_subdirectory(src)
